[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/chickens/AIChickenMovement.gd" type="Script" id=1]

[node name="AIChickenMovement" type="Node"]
script = ExtResource( 1 )
min_start = 2

[node name="StartMoveTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="MovingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="StartMoveTimer" to="." method="_on_StartMoveTimer_timeout"]
[connection signal="timeout" from="MovingTimer" to="." method="_on_MovingTimer_timeout"]
